removed extra space

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -262,5 +262,5 @@ for(i in 1:length(memb_opioid_sorted)){
 }
 clusters_list
 ```
-
+<div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;"></div>
 
